tests/files/fail/typing.rl
fn my_function(x: int) -> string {
    print(x);
    return 1;
}

my_function("testing");

let x: string = 1;
